# smart-parking

./: CMakeLists.txt  README.md
config/: acl.json  common.json  stream_config.json
docs/: H2S 算法输出字段.xlsx  臻识相机高位停车算法库开发文档.docx
scripts/: dir_monitor.sh  make_package.sh  system_mem_monitor.sh
src/: CMakeLists.txt  ai_si_export.map
src/access/: access_detector.cc  access_detector.h
src/illegal_parking/: awry_parking.cc  capture_record_container.cc  capture_record_container.h  cross_space_check.cc  illegal.h  illegal_history_record.cc  illegal_history_record.h  illegal_parking_algorithm.cc  illegal_parking_algorithm.h  no_parking_area.cc  no_time_parking.cc
src/image_processor/: image_ive_common.h  image_process.cc  image_process.h
src/include/: access_config.h  common_define.h  config_content.h  config_field.h  data_type.h  error.h  frame_inage_data.h  parking_config.h  sl_data_types_base.h
src/interfaces/: aih_extern.h  aih_lib.h  aih_prop.h  aih_type.h  sl_spd_sdk.cc
src/managers/: aih_eventinfo_convert.cc  aih_eventinfo_convert.h  cached_frames_manager.cc  cached_frames_manager.h  device_manager.cc  device_manager.h  param_manager.cc  param_manager.h  private_data_manager.cc  private_data_manager.h  project_manager.cc  project_manager.h
src/models_processor/: char_code.h  lp_detection.cpp  lp_detection.h  lp_recognition.cpp  lp_recognition.h  model_datatype.h  model_process.h  model_process_base.cpp  model_process_base.h  reid.cc  reid.h  vehicle_detection.cc  vehicle_detection.h
src/track/: iou.h  trajectory.cc  trajectory.h
src/track/matching/: associate.cc  associate.h  lapjv.cc  lapjv.h
src/track/motion/: calc_distance.h  calc_iou.h  calc_velocity.cc  calc_velocity.h  distance.cc  improved_kalman_filter.cc  improved_kalman_filter.h  levenshtein.cc  levenshtein.h
src/utils/: CircularArray.h  Singleton.h  argument_parser.cc  argument_parser.h  check_param_range.h  detections_save.h  file_utils.h  function_timer.h  sl_logger.cc  sl_logger.h  struct_2_stream.cc  struct_2_stream.h  struct_2_string.cc  struct_2_string.h  time_utils.h  utils.cpp  utils.h
src/veh_in_out/: capture_control.cc  capture_control.h  park_order.cc  park_order.h  parking_info.cc  parking_info.h  space_judge.h  trend_acc.h  veh_base_info.cc  veh_base_info.h  veh_cache_info.cc  veh_cache_info.h  veh_info_copy.h  veh_info_upload.cc  veh_info_upload.h  veh_inout_processer.cc  veh_inout_processer.h  veh_status_process.cc  veh_status_process.h
